[codeai] Generate unit tests, refactor classes