@@ -1,3 +1,4 @@
+
 package org.example;
 
 public class Client {
@@ -8,13 +9,13 @@ public class Client {
     }
 
     public String greeting(String name) {
-        if (name == null || name.isBlank()) {
+        if (name == null || name.trim().isEmpty()) {
             throw new IllegalArgumentException("'name' must not be null or empty");
         }
 
-        boolean even = service.isEven(name.length());
+        boolean isNameLengthEven = service.isEven(name.length());
         String greeting = "Hello, %s".formatted(name);
-        if (even) {
+        if (isNameLengthEven) {
             return greeting.toUpperCase();
         } else {
             return greeting;
